packages/taquito-michel-codec/test/contracts_015/ill_typed/pack_sapling_state.tz
# Verify SAPLING_STATE is not packable. The contract should not typecheck when using `PACK`.
# The lines below PACK are present only in case of PACK allows SAPLING_STATE to
# make the typechecker happy.
parameter unit;
storage (sapling_state 8);
code { UNPAIR;
       DROP;
       PACK;
       DROP;
       SAPLING_EMPTY_STATE 8;
       NIL operation;
       PAIR;
     }
